--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixl-ipc",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "IPC Server using Unix Sockets and the pixl-server framework",
 	"author": "Robert Dominy <rdominy+github@gmail.com>",
   "homepage": "https://github.com/rdominy/pixl-ipc",
@@ -11,7 +11,7 @@
     "url": "https://github.com/rdominy/pixl-ipc"
   },
   "scripts": {
-    "test": "mocha test.js"
+    "test": "mocha test/test.js"
   },
 	"bugs": {
 		"url": "https://github.com/rdominy/pixl-ipc/issues"
